--- a/css/style1.css
+++ b/css/style1.css
@@ -3,21 +3,17 @@
 * This file contains the CSS for index1.html
 */
 
-.mdl-layout__header-row {
-  align-items: center;
-  justify-content: center;
+body {
+  background-color: powderblue;
 }
 
-.mdl-layout__content {
-  padding-right: 15pt;
-  padding-left: 15pt;
-  padding-top: 15pt;
+h1 {
+  background-color: rgb(255 165 0);
+  color: hsl(147deg 50% 47%);
+  padding: 40px;
+  text-align: center;
 }
 
-/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
-*/
-
-.mdl-ripple {
-  background: #000;
-  opacity: 0.001;
+p {
+  background-color: #f0f;
 }
